# Inversion-List-Implementation-for-Interval-Manipulation

./: CppCheckSuppressions.txt  LICENSE  README.md  README.rst
.github/workflows/: cmake.yml
cmake/: FindCcLint.cmake  FindHtmlCoverage.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  index.rst
inversion-list/: CMakeLists.txt  README.rst
inversion-list/cmake/: FindCcLint.cmake  FindClangFormat.cmake  FindCoverage.cmake  FindCppCheck.cmake  FindFlawFinder.cmake  FindValgrind.cmake
inversion-list/docs/: api.rst  conf.py  requirements.txt
inversion-list/src/: CMakeLists.txt  Doxyfile
inversion-list/src/inversion-list/: InversionListConfig.cmake.in  inversion-list.c  inversion-list.h  inversion-list.inc  inversion-list.pc.in
inversion-list/test/inversion-list/: CMakeLists.txt  test-create-destroy-3.c  test-create-destroy-4.c  test-struct.c  test-union.c
inversion-list/workflows/: cmake.yml
src/inversion-list/: CMakeLists.txt  inversion-list.c  inversion-list.h
test/inversion-list/: test-clone.c  test-complement.c  test-couple-iterator.c  test-create-destroy-2.c  test-difference.c  test-equals.c  test-getters.c  test-intersection.c  test-iterator.c  test-member.c  test-struct.c  test-to-string.c  test-union.c
